--- a/index.html
+++ b/index.html
@@ -4,25 +4,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" href="https://use.typekit.net/zfy5vcp.css">
     <title>Homework 10</title>
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <h1>Temperature Facts</h1>
-    </header>
-    <!-- Main Section -->
-    <main>
-      <section>
-        <h2>Constant Temperatures</h2>
-        <p>Water boils at <span id="boiling-temp"></span> degrees Fahrenheit.</p>
-        <p>Water freezes at <span id="freezing-temp"></span> degrees Fahrenheit.</p>
-      </section>
-      <section>
-        <h2>Variable Temperatures</h2>
-        <p>The current water temperature is <span id="water-temp"></span> degrees Fahrenheit.</p>
-      </section>
-    </main>
+    <div class="container">
+      <header>
+        <h1>Temperature Facts</h1>
+      </header>
+      <!-- Main Section -->
+      <main>
+        <section>
+          <h2>Constant Temperatures</h2>
+          <p>Water boils at <span id="boiling-temp"></span> degrees Fahrenheit.</p>
+          <p>Water freezes at <span id="freezing-temp"></span> degrees Fahrenheit.</p>
+        </section>
+        <section>
+          <h2>Variable Temperatures</h2>
+          <p>The current water temperature is <span id="water-temp"></span> degrees Fahrenheit.</p>
+        </section>
+      </main>
+    </div>
     <!-- Footer -->
     <footer>
       <section id="boiling" class="hide">
